[package]
name = "local-rcu"
version = "1.0.1"
edition = "2021"
authors = [ "Cody P Schafer <dev@codyps.com>"]
license = "OSL-3.0"
description = "RCU with a safe API and local collection of old values"
readme = "README.md"
homepage = "https://github.com/jmesmon/local-rcu"
documentation = "https://docs.rs/local-rcu"
repository = "https://github.com/jmesmon/local-rcu"

[dependencies]
slab = "0.4.9"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.1", features = [ "checkpoint" ] }

[dev-dependencies]
trybuild = "1.0.85"
criterion = { version = "0.5.1" }

[[bench]]
name = "b"
harness = false

[profile.release]
debug = true

